samples/_failures_safe/1761465779_1f00ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_440a2a26.c: In function ‘main’:
./samples/SAFE/__tmp_440a2a26.c:164:22: error: expected ‘;’ at end of input
  164 |     multiply_matrices
      |                      ^
      |                      ;
./samples/SAFE/__tmp_440a2a26.c:164:5: error: expected declaration or statement at end of input
  164 |     multiply_matrices
      |     ^~~~~~~~~~~~~~~~~
